--- a/metis-web/packages/web/src/pages/DashboardPage.module.css
+++ b/metis-web/packages/web/src/pages/DashboardPage.module.css
@@ -10,6 +10,7 @@
   flex-direction: row;
   flex: 1;
   min-height: 0;
+  margin-left: calc(-1 * var(--space-4));
 }
 
 .center {
